--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
       run: poetry install
 
     - name: Install ffmpeg
-      run: apt-get update && apt-get install -y ffmpeg 
+      run: sudo apt-get update && sudo apt-get install -y ffmpeg 
 
     - name: Run tests
       run: poetry run pytest
