fix: ensure logs are always uploaded as artifacts

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,12 +33,12 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: ffmpeg-logs
-        path: "**/ffmpeg.log"
+        path: logs/
 
 
     - name: Upload HTML coverage report
-      if: success() && github.event_name == 'push'
+      if: always() && github.event_name == 'push'
       uses: actions/upload-artifact@v4
       with:
         name: coverage-report
-        path: path htmlcov/
+        path: htmlcov/
