--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,3 +42,11 @@ jobs:
       with:
         name: coverage-report
         path: htmlcov/
+
+    - name: Upload pytest HTML report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: pytest-html-report
+        path: report.html
+
